CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( pg_opencv )

SET(CMAKE_CXX_COMPILER "g++")
#SET( CMAKE_BUILD_TYPE Debug  )
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
#LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

#ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )

INCLUDE_DIRECTORIES( /usr/include/flycapture )

FIND_PACKAGE( OpenCV REQUIRED )

ADD_LIBRARY( input_pG_opencv SHARED input_pG_opencv.cpp )

TARGET_LINK_LIBRARIES( input_pG_opencv ${OpenCV_LIBS} 
/usr/lib/libflycapture.so)	
